fix: update page title and add favicons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>SkyCast - Weather App</title>
+    <link rel="icon" type="image/png" href="/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/icons/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+    <title>SkycastWeather - Modern Weather App</title>
   </head>
   <body>
     <div id="root"></div>
